# common_tools

./: JenkinsForAndroid.md  README.md  fragment.md  kotlin.md  kotlin协程.md  kotlin常用内联函数.md  okhttp3.4.1.md  springboot.md  问题.md
AndroidNDK/: C语言移植.md
Android主题/: SkinLoadera方案.md  bilibili方案.md
Android屏幕适配/: Android 屏幕适配：最全面的解决方案 - 简书 (2021_5_12 下午5_27_08).html  Android高级UI（三），屏幕适配_zjuter的专栏-CSDN博客 (2021_5_12 下午5_14_37).html
Android手动打包/: package.txt
Android插件化和热修复/: init.md  文章总结.md
Java/HashMap/: HashMap 源码设计思想 - 云_社区 - 腾讯云 (2021_4_14 下午4_16_24).html  初探HashMap.md
code/: README.md  ViewRender.drawio  ViewRender.md  常见NDK移植.md
code/LameMP3/: settings.gradle
code/LameMP3/app/: build.gradle
code/LameMP3/app/src/main/cpp/: CMakeLists.txt  lame_use.cpp  mp3_encoder.cpp  mp3_encoder.h
code/LameMP3/app/src/main/cpp/libmp3lame/i386/: nasm.h
code/Share2Calendar/: readme.md  settings.gradle
code/cmd2PackageAPK/: cmd-record.md
code/eventDispatch/: build.gradle  readme.md  settings.gradle  touchEventDispatcher.drawio  touchEventDispatcher.md
code/hotfix/: bbuild.bat  build.gradle  pushpatch.bat  settings.gradle
code/m3u8Download/: settings.gradle
单向数据流/: unidirectionFlow.drawio
双向数据流(双向绑定)/: LiveData.md  databinding.drawio
戏曲API/: download.html
直播/: Android直播实现（Android端推流、播放）_好记性不如写博客！-CSDN博客_android 直播 (2021_5_12 下午3_53_18).html
视频/: ffmpeg.md  ffmpeg_通用API.md  ffplay.md  ffprobe.md  nginx_流媒体环境搭建_windows.md
视频/知识/: [总结]视音频编解码技术零基础学习方法_雷霄骅(leixiaohua1020)的专栏-CSDN博客 (2021_5_12 上午11_21_04).html  图像与视频编码基础知识 - 知乎 (2021_5_12 上午10_22_07).html  (+1 more)
(+260 files in other folders)
